--- a/docs/latex/md__home_ral_workspace_MediaProcessors_selfcontained_MediaProcessors_README.tex
+++ b/docs/latex/md__home_ral_workspace_MediaProcessors_selfcontained_MediaProcessors_README.tex
@@ -95,4 +95,4 @@ Change to the \textquotesingle{}docs/html\textquotesingle{} folder
 
 and open the file \textquotesingle{}index.\+html\textquotesingle{} (documentation index) with any browser.
 
-Now please continue ahead with Media\+Processors \hyperlink{md_DOCUMENTATION}{documentation} 
+Now please continue ahead with Media\+Processors \href{docs/html/md_DOCUMENTATION.html}{\tt documentation} 
