--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -95,4 +95,5 @@ Change to the \textquotesingle{}docs/html\textquotesingle{} folder
 
 and open the file \textquotesingle{}index.\+html\textquotesingle{} (documentation index) with any browser.
 
-Now please continue ahead with Media\+Processors \href{md_DOCUMENTATION.html}{\tt documentation} 
+Now please continue ahead with Media\+Processors \href{md_DOCUMENTATION.html}{\tt documentation}~\newline
+ (To see documentation directly from Git\+Hub follow \href{https://rantoniello.github.io/MediaProcessors/html/}{\tt this link}) 
